--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a href="http://localhost:5500/home.html">Drinks</a></li>
             </ul>
         </div>
-        <img src= "/images/queso-taco.png">
+        <img src= "./queso-taco.png">
         <p>We like to keep it fresh. mix things up a bit. live on the edge.</p>
         <h2>Menu
         </h2>
